[project]
name = "ckge-utils"
version = "0.1.0"
description = "Utilities for Continual Knowledge Graph Embedding"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Gerard Pons Recasens"}
]

dependencies = [
  "pykeen>=1.10",
  "gradio==5.49.1",
  "plotly==5.24.1",
]

[project.urls]
Homepage = "https://github.com/gerardponsrecasens/CKGE-Lab"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
